workloads/bgd/base/bgd-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bgd
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec: {}
